--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,8 +57,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\HexGrid\HexGridBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Cards\CardBehaviour.cs" />
     <Compile Include="Assets\Samples\Input System\1.0.2\Custom Binding Composite\CustomComposite.cs" />
     <Compile Include="Assets\Scripts\Tools\Singleton.cs" />
+    <Compile Include="Assets\Scripts\Data\Card.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManager.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManagerInspector.cs" />
     <Compile Include="Assets\Scripts\Inputs\PlayerController.cs" />
@@ -72,8 +74,12 @@
     <Compile Include="Assets\Scripts\ShopManager.cs" />
     <Compile Include="Assets\Scripts\Data\GridDataInspector.cs" />
     <Compile Include="Assets\Scripts\Data\BuildingsData.cs" />
-    <Compile Include="Assets\Scripts\Data\CardData.cs" />
-    <Compile Include="Assets\Scripts\Cards\CardBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Cards\CardManager.cs" />
+    <Compile Include="Assets\Scripts\Tools\Tools.cs" />
+    <Compile Include="Assets\Scripts\Data\ActionCard.cs" />
+    <Compile Include="Assets\Scripts\Data\BlueprintCard.cs" />
+    <Compile Include="Assets\Scripts\Cards\ActionCardBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Cards\BlueprintCardBehaviour.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
