--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Assets\Scripts\HexGrid\HexGridBehaviour.cs" />
     <Compile Include="Assets\Scripts\Cards\CardBehaviour.cs" />
     <Compile Include="Assets\Samples\Input System\1.0.2\Custom Binding Composite\CustomComposite.cs" />
+    <Compile Include="Assets\Scripts\Cards\CardBehaviourInspector.cs" />
+    <Compile Include="Assets\Scripts\Cards\CardManager_Inspector.cs" />
     <Compile Include="Assets\Scripts\Tools\Singleton.cs" />
     <Compile Include="Assets\Scripts\Data\Card.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManager.cs" />
@@ -77,11 +79,14 @@
     <Compile Include="Assets\Scripts\HexGrid\HexGridCreatorInspector.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridCreator.cs" />
     <Compile Include="Assets\Scripts\ShopManager.cs" />
+    <Compile Include="Assets\Scripts\BuildingAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Data\GridDataInspector.cs" />
+    <Compile Include="Assets\BookButton.cs" />
     <Compile Include="Assets\Scripts\Cards\BlueprintCardBehaviour.cs" />
     <Compile Include="Assets\Scripts\Data\BuildingsData.cs" />
     <Compile Include="Assets\Scripts\Data\ActionCard.cs" />
-    <Compile Include="Assets\Scripts\Cards\CardBehaviourInspector.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Cards\StarterDeck_ScriptableObject.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
