now we can end the turn

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,16 +61,17 @@
     <Compile Include="Assets\Scripts\Cards\CardBehaviour.cs" />
     <Compile Include="Assets\Samples\Input System\1.0.2\Custom Binding Composite\CustomComposite.cs" />
     <Compile Include="Assets\Scripts\Cards\CardBehaviourInspector.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
     <Compile Include="Assets\Scripts\Cards\CardManager_Inspector.cs" />
-    <Compile Include="Assets\Scripts\InventoryManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\InventoryManager.cs" />
     <Compile Include="Assets\Scripts\Tools\Singleton.cs" />
     <Compile Include="Assets\Scripts\Data\Card.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManager.cs" />
-    <Compile Include="Assets\Scripts\BookManager.cs" />
+    <Compile Include="Assets\Scripts\Book\BookManager.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManagerInspector.cs" />
+    <Compile Include="Assets\Scripts\EndTurnButton.cs" />
     <Compile Include="Assets\Scripts\Inputs\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\BookActivateButton.cs" />
+    <Compile Include="Assets\Scripts\Book\BookActivateButton.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridBehaviourInspector.cs" />
     <Compile Include="Assets\Scripts\Tools\Tools.cs" />
     <Compile Include="Assets\Scripts\MoveCamera.cs" />
@@ -79,14 +80,14 @@
     <Compile Include="Assets\Scripts\Cards\CardManager.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\Cards\ActionCardBehaviour.cs" />
-    <Compile Include="Assets\Scripts\BookCloseButton.cs" />
+    <Compile Include="Assets\Scripts\Book\BookCloseButton.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridCreatorInspector.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridCreator.cs" />
-    <Compile Include="Assets\Scripts\ShopManager.cs" />
-    <Compile Include="Assets\Scripts\BuildingAbilityManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\ShopManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\BuildingAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Data\GridDataInspector.cs" />
     <Compile Include="Assets\Scripts\Cards\HandHandler.cs" />
-    <Compile Include="Assets\BookButton.cs" />
+    <Compile Include="Assets\Scripts\Book\BookButton.cs" />
     <Compile Include="Assets\Scripts\Cards\BlueprintCardBehaviour.cs" />
     <Compile Include="Assets\Scripts\Data\BuildingsData.cs" />
     <Compile Include="Assets\Scripts\Cards\StarterDeck_ScriptableObject.cs" />
