--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\Scripts\LookAtCamera.cs" />
     <Compile Include="Assets\Scripts\Cards\CardBehaviour.cs" />
     <Compile Include="Assets\Samples\Input System\1.0.2\Custom Binding Composite\CustomComposite.cs" />
+    <Compile Include="Assets\Scripts\Tools\RunLater.cs" />
     <Compile Include="Assets\Scripts\Cards\CardBehaviourInspector.cs" />
     <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
     <Compile Include="Assets\Scripts\Cards\CardManager_Inspector.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Assets\Scripts\Data\Card.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManager.cs" />
     <Compile Include="Assets\Scripts\Book\BookManager.cs" />
+    <Compile Include="Assets\Scripts\BuyCardsMenuHandler.cs" />
     <Compile Include="Assets\Scripts\HexGrid\HexGridPropertiesManagerInspector.cs" />
     <Compile Include="Assets\Scripts\Cheats.cs" />
     <Compile Include="Assets\Scripts\EndTurnButton.cs" />
@@ -96,7 +98,6 @@
     <Compile Include="Assets\Scripts\Data\BuildingsData.cs" />
     <Compile Include="Assets\Scripts\Cards\StarterDeck_ScriptableObject.cs" />
     <Compile Include="Assets\Scripts\Data\ActionCard.cs" />
-    <Compile Include="Assets\Scripts\BuyCardsMenuHandler.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
